<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>1.5.16.RELEASE</version>
  </parent>

  <modelVersion>4.0.0</modelVersion>

  <artifactId>mechaverse-manager-app</artifactId>
  <packaging>jar</packaging>

  <properties>
    <spring-boot.version>1.5.16.RELEASE</spring-boot.version>
    <dependency-plugin.version>2.10</dependency-plugin.version>
    <mechaverse.version>0.1</mechaverse.version>
    <start-class>org.mechaverse.manager.ManagerApp</start-class>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.mechaverse.manager</groupId>
      <artifactId>mechaverse-manager-service</artifactId>
      <version>${mechaverse.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-tomcat</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <version>1.5.16.RELEASE</version>
    </dependency>

    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-swagger2</artifactId>
      <version>2.8.0</version>
    </dependency>

    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-swagger-ui</artifactId>
      <version>2.8.0</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot.version}</version>

        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>

        <configuration>
          <jvmArguments>-Xdebug -Xmx5192m -XX:MaxPermSize=128M
            -Djava.security.egd=file:/dev/./urandom
            -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
          </jvmArguments>
          <arguments>
          </arguments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${dependency-plugin.version}</version>
        <configuration>
          <ignoreNonCompile>true</ignoreNonCompile>
          <ignoredDependencies>
            <!-- Spring Boot dependencies -->
            <ignoredDependency>org.springframework.boot:spring-boot-starter</ignoredDependency>
            <ignoredDependency>org.springframework.boot:spring-boot-starter-data-jpa
            </ignoredDependency>
            <ignoredDependency>org.apache.tomcat.embed:tomcat-embed-core</ignoredDependency>
            <ignoredDependency>com.sun.jersey:jersey-bundle</ignoredDependency>
          </ignoredDependencies>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
